# fedora-copa

./: .gitignore  CLAUDE.md  Makefile  README.md  README_zh.md  copa-plan.md  pyproject.toml
.github/workflows/: build-rpm.yml  ci.yml  publish-copr.yml
completions/: _copa  copa.bash
copa/: __init__.py  __main__.py  cli.py  config.py  copr_backend.py  dnf_backend.py  obs_backend.py  search.py  state.py  utils.py
docs/: api-notes.md
man/: copa.1
rpm/: build.sh  copa.spec
tests/: test_cli.py  test_config.py  test_dnf_backend.py  test_obs_backend.py  test_search.py  test_state.py
