[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copa"
version = "0.1.0"
description = "DNF5 风格的 Fedora Copr 软件包助手"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "copa contributors"}
]
keywords = ["fedora", "copr", "dnf5", "package-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "python-copr>=1.125",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
copa = "copa.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/copa"
Repository = "https://github.com/yourusername/copa"
Issues = "https://github.com/yourusername/copa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["copa*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
