[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copa"
version = "0.5.0"
description = "DNF5 风格的 Fedora Copr 软件包助手"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "copa contributors"}
]
keywords = ["fedora", "copr", "dnf5", "package-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "copr",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
copa = "copa.cli:main"

[project.urls]
Homepage = "https://github.com/WenYin-Community/fedora-copa"
Repository = "https://github.com/WenYin-Community/fedora-copa"
Issues = "https://github.com/WenYin-Community/fedora-copa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["copa*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
